@@ -10,7 +10,6 @@
 use strict;
 use warnings;
 
-use TestLib;
 use Test::More tests => 4;
 
 use FirebirdFDWNode;
